tdf#163383 Skip adding a tooltip to internal links in all cases

Change-Id: I1d4e46b6e886d45982f3e8145e0bc12ec12d9884
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176626
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Jenkins